# gekkofs

./: .gitlab-ci.yml  CMakeLists.txt  README.md
CMake/: FindExtrae.cmake  FindLibFabric.cmake
docker/: build_env.docker
ifs/: CMakeLists.txt
ifs/include/daemon/adafs_ops/: metadentry.hpp
ifs/include/daemon/backend/data/: chunk_storage.hpp
ifs/include/daemon/classes/: fs_data.hpp  uids_manager.hpp
ifs/include/daemon/handler/: rpc_defs.hpp
ifs/include/global/: configure.hpp  global_defs.hpp  margo.hpp  metadata.hpp
ifs/include/global/margo/: endpoint.hpp  engine.hpp  errors.hpp
ifs/include/global/rpc/: distributor.hpp  rpc_types.hpp
ifs/include/preload/: adafs_functions.hpp  hooks.hpp  open_dir.hpp  open_file_map.hpp  passthrough.hpp  preload_context.hpp  preload_util.hpp
ifs/include/preload/rpc/: engine.hpp  ld_rpc_data_ws.hpp  ld_rpc_metadentry.hpp
ifs/scripts/: compile_dep.sh  dl_dep.sh  shutdown_adafs.py  startup_adafs.py
ifs/src/api/: CMakeLists.txt  gekkofs.h  libgekkofs-api.c  libgekkofs-api.cpp
ifs/src/daemon/: CMakeLists.txt  adafs_daemon.cpp
ifs/src/daemon/adafs_ops/: metadentry.cpp
ifs/src/daemon/backend/data/: CMakeLists.txt  chunk_storage.cpp
ifs/src/daemon/backend/metadata/: CMakeLists.txt  db.cpp
ifs/src/daemon/classes/: fs_data.cpp  uids_manager.cpp
ifs/src/daemon/handler/: h_data.cpp  h_metadentry.cpp
ifs/src/global/: CMakeLists.txt  margo.cpp  metadata.cpp
ifs/src/global/margo/: CMakeLists.txt  endpoint.cpp  engine.cpp  errors.cpp
ifs/src/global/rpc/: distributor.cpp
ifs/src/preload/: CMakeLists.txt  adafs_functions.cpp  hooks.cpp  intcp_functions.cpp  intercept.cpp  open_dir.cpp  open_file_map.cpp  passthrough.cpp  preload.cpp  preload_context.cpp  preload_util.cpp  resolve.cpp
ifs/src/preload/rpc/: engine.cpp  ld_rpc_data_ws.cpp  ld_rpc_management.cpp  ld_rpc_metadentry.cpp
ifs_test/: CMakeLists.txt  rename_test.cpp  wr_test.cpp
include/: config.hpp
include/client/: adafs_functions.hpp  env.hpp  gkfs_functions.hpp  hooks.hpp  intcp_functions.hpp  open_dir.hpp  open_file_map.hpp  passthrough.hpp  preload.hpp  preload_context.hpp  preload_util.hpp  resolve.hpp
include/client/rpc/: ld_rpc_data_ws.hpp  ld_rpc_management.hpp  ld_rpc_metadentry.hpp  rpc_types.hpp
include/daemon/: env.hpp  main.hpp  util.hpp
include/daemon/adafs_ops/: metadentry.hpp
include/daemon/backend/: exceptions.hpp
include/daemon/backend/data/: chunk_storage.hpp
include/daemon/backend/metadata/: db.hpp  merge.hpp
include/daemon/classes/: fs_data.hpp  rpc_data.hpp
include/daemon/handler/: rpc_defs.hpp
include/daemon/ops/: metadentry.hpp
include/daemon/scheduler/: agios.hpp
include/global/: chunk_calc_util.hpp  cmake_configure.hpp.in  configure.hpp  configure.hpp.in  exceptions.hpp  global_defs.hpp  global_func.hpp  hash_util.hpp  log_util.hpp  metadata.hpp  ofi_util.hpp  ofi_utils.hpp  path_util.hpp  tracing.hpp
include/global/rpc/: distributor.hpp  rpc_types.hpp  rpc_utils.hpp
scripts/: benchmark_check.sh  compile_dep.sh  dl_dep.sh  launcher.sh
src/client/: CMakeLists.txt  adafs_functions.cpp  gkfs_functions.cpp  hooks.cpp  intcp_functions.cpp  intercept.cpp  open_dir.cpp  open_file_map.cpp  passthrough.cpp  preload.cpp  preload_context.cpp  preload_util.cpp  resolve.cpp
src/client/rpc/: ld_rpc_data_ws.cpp  ld_rpc_management.cpp  ld_rpc_metadentry.cpp
src/daemon/: CMakeLists.txt  adafs_daemon.cpp  daemon.cpp  main.cpp  util.cpp
src/daemon/adafs_ops/: metadentry.cpp
src/daemon/backend/data/: chunk_storage.cpp
src/daemon/backend/metadata/: db.cpp  merge.cpp
src/daemon/classes/: fs_data.cpp  rpc_data.cpp
src/daemon/handler/: h_data.cpp  h_metadentry.cpp  h_preload.cpp
src/daemon/ops/: metadentry.cpp
src/global/: CMakeLists.txt  global_func.cpp  log_util.cpp  metadata.cpp  ofi_util.cpp  ofi_utils.cpp  path_util.cpp  tracing.cpp
src/global/rpc/: distributor.cpp  rpc_utils.cpp
test/: CMakeLists.txt  bash_testing.sh  bash_testing2.sh  bash_testing_concatenate.sh  wr_test.cpp
utils/: generate.py
